--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">droidtraining</string>
+    <string name="next">Next</string>
+    <string name="reload">Reload</string>
+    <string name="min">Min</string>
+    <string name="max">Max</string>
 </resources>
